// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeStar matches last snapshot 1`] = `
<ForwardRef
  hitSlop={
    Object {
      "bottom": 10,
      "left": 15,
      "right": 15,
      "top": 10,
    }
  }
  onPress={[Function]}
>
  <StarIcon
    theme={
      Object {
        "icon": Object {
          "backgroundColor": "transparent",
          "color": "#0DC39F",
          "fontSize": 30,
        },
      }
    }
  />
</ForwardRef>
`;

exports[`TopicList matches last snapshot 1`] = `
<View>
  <Text>
    No topics were found for this community
  </Text>
</View>
`;

exports[`TopicList matches last snapshot with empty list 1`] = `
<View>
  <Text>
    No topics were found for this community
  </Text>
</View>
`;

exports[`TopicRow matches last snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
>
  <SubscribeStar
    isSubscribed={true}
    onPress={[Function]}
  />
  <Text>
    #
    theTopic
  </Text>
  <View>
    <Badge
      count={4}
    />
    <Icon
      allowFontScaling={false}
      name="chevron-right"
      size={12}
    />
  </View>
</ForwardRef>
`;

exports[`Topics "Support Coming Soon" displayed when no community id 1`] = `<TopicSupportComingSoon />`;

exports[`Topics "Support Coming Soon" not displayed when a community id is present, fetches 1`] = `
<View
  onLayout={[Function]}
>
  <RCTScrollView>
    <View>
      <View>
        <Image
          source={
            Object {
              "uri": undefined,
            }
          }
        />
        <div
          colors={
            Array [
              "rgba(0, 0, 0, 0)",
              "rgba(0, 0, 0, 0.1)",
              "rgba(0, 0, 0, 0.3)",
              "rgba(0, 0, 0, 0.6)",
            ]
          }
        >
          MockLinearGradient
        </div>
        <View>
          <Text />
        </View>
      </View>
      <View>
        <Icon
          name="Search"
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          placeholder="Search Topics"
          rejectResponderTermination={true}
          underlineColorAndroid="transparent"
        />
      </View>
      <View>
        <Text>
          No topics were found for this community
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Topics renders correctly a community and topics 1`] = `
<View
  onLayout={[Function]}
>
  <RCTScrollView>
    <View>
      <View>
        <Image
          source={
            Object {
              "uri": "community-banner.png",
            }
          }
        />
        <div
          colors={
            Array [
              "rgba(0, 0, 0, 0)",
              "rgba(0, 0, 0, 0.1)",
              "rgba(0, 0, 0, 0.3)",
              "rgba(0, 0, 0, 0.6)",
            ]
          }
        >
          MockLinearGradient
        </div>
        <View>
          <Text>
            Foomunity
          </Text>
        </View>
      </View>
      <View>
        <Icon
          name="Search"
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          placeholder="Search Topics"
          rejectResponderTermination={true}
          underlineColorAndroid="transparent"
        />
      </View>
      <View>
        <Text>
          No topics were found for this community
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Topics renders correctly with pending=true 1`] = `
<View
  onLayout={[Function]}
>
  <RCTScrollView>
    <View>
      <View>
        <Image
          source={
            Object {
              "uri": "community-banner.png",
            }
          }
        />
        <div
          colors={
            Array [
              "rgba(0, 0, 0, 0)",
              "rgba(0, 0, 0, 0.1)",
              "rgba(0, 0, 0, 0.3)",
              "rgba(0, 0, 0, 0.6)",
            ]
          }
        >
          MockLinearGradient
        </div>
        <View>
          <Text>
            Foomunity
          </Text>
        </View>
      </View>
      <View>
        <Icon
          name="Search"
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={false}
          editable={true}
          placeholder="Search Topics"
          rejectResponderTermination={true}
          underlineColorAndroid="transparent"
        />
      </View>
      <View>
        <ActivityIndicator
          animating={true}
          color="#818A88"
          hidesWhenStopped={true}
          size="small"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
